--- a/main.css
+++ b/main.css
@@ -6,21 +6,85 @@ html, body{
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	background-color: #111026;
 }
 #firstLink{
 	display: block;
-	width:100px; 
+	width:100%; 
 	position:relative;
 	margin:auto;
+	
 }
 #firstLink a{
-	list-style: none;
 	text-decoration: none;
-
+	display: block;
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+    background-color: #E6E8C3;
+    text-align: center;
+    color: #111026;
+    font-size: 5em;
+}
+#firstLink a:hover{
+	color: #BFADA3;
 }
 h1{
 	text-align: center;
 	padding-top: 5%;
 }
+#chat{
+	display: none;
+}
+#messages {
+    display: block;
+    margin: auto;
+    color: #8C6461;
+    font-size: 1.5em;
+    text-align: center;
+    padding-top: 10%;
+    padding-bottom: 3%;
+}
+
+input#message {
+    display: block;
+    margin: auto;
+    margin-top: 5%;
+    padding: 3% 15%;
+   
+}
+/*#inputChat{
+	background-color: #BFADA3;
+	margin: auto;
+    width: 20%;
+    padding: 50px;
+}*/
+
+#submit{
+    display: block;
+    margin: auto;
+    margin-top: 2%;
 
 
+}
+
+#submit a{
+	text-decoration: none;
+	display: block;
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+    background-color: #E6E8C3;
+    text-align: center;
+    color: #111026;
+}
+
+#submit a:hover{
+	color: #BFADA3;
+}
+
+
+
+p{
+    margin: .5em 0;
+}
